--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native-stack": "^6.9.26",
     "expo": "~51.0.14",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -27,7 +28,7 @@
     "eslint-plugin-react": "^7.34.2",
     "globals": "^15.4.0",
     "prettier": "3.3.2",
-    "typescript": "^5.1.3",
+    "typescript": "~5.3.3",
     "typescript-eslint": "^7.13.0"
   },
   "private": true
