--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react": "^7.34.2",
     "globals": "^15.4.0",
     "prettier": "3.3.2",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "~5.3.3",
     "typescript-eslint": "^7.13.0"
   },
